--- a/modello/modello.tex
+++ b/modello/modello.tex
@@ -38,12 +38,25 @@
 %
 \begin{abstract}
 Questo progetto tratta la realizzazione attraverso il pacchetto \emph{Whoosh}, di un motore di ricerca
-volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.  \keywords{{\it
-      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python}}
+volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.
+Il progetto è anche corredato di un webserver che permette all'utente di interrogare il motore di ricerca
+in forma interattiva attraverso un browser a scelta.
+ \keywords{{\it
+      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python \and webserver \and web \and interrogazione web}}
 \end{abstract}
 
 \section{Introduzione}
 \label{sec:introduzione}
+
+Lo scopo è di costruire un motore di ricerca che sia in grado di reperire i documenti rilevanti relativi a una esigenza informativa\footnote{insieme delle circostanze in cui unapersona ha un problema da risolvere o un compito da svolgeree richiede informazioni importanti, utili o necessarie per larisoluzione del problema o lo svolgimento del compito}
+espressa dall'utente sotto forma di query, dalla collezione sperimentale Ohsumed.
+
+
+Esistono diversi modi per risolvere questo problema, nel nostro caso abbiamo ricercato la configurazione migliore tra un sistema di
+reperimento con o senza uso di stopwords e il tuning dei parametri dello schema di pesatura\footnote{funzione che assegna per ogni documento diversi livelli d’importanza dei termini mediante dei pesi, che possono variare con l’interrogazione} BM25F \cite{WBC}.
+
+
+
 
 L'obiettivo principale della relazione \`e da una parte la
 documentazione del progetto di un servizio di {IR} e dall'altra una
@@ -125,9 +138,8 @@ Autore, F., Autore, S.: Title of a proceedings paper. In: Editor,
 F., Editor, S. (eds.) CONFERENCE 2016, LNCS, vol. 9999, pp. 1--13.
 Springer, Heidelberg (2016). \doi{10.10007/1234567890}
 
-\bibitem{ref_book1}
-Autore, F., Autore, S., Autore, T.: Book title. 2nd edn. Publisher,
-Location (1999)
+\bibitem{WBC}
+W. Bruce Croft and Donald Metzler and Trevor Strohman. Search Engines: Information Retrieval in Practice. Addison Wesley, (2009), pp. 250-252
 
 \bibitem{ref_proc1}
 Autore, A.-B.: Contribution title. In: 9th International Proceedings
