Ancora sull'introduzione

--- a/modello/modello.tex
+++ b/modello/modello.tex
@@ -37,6 +37,20 @@
 % typeset the header of the contribution
 %
 \begin{abstract}
+
+
+Lo scopo finale di un Sistema di Information Retrieval (IRS) e' quello di reperire documenti rilevanti relativi a una certa esigenza informativa\footnote{insieme delle circostanze in cui unapersona ha un problema da risolvere o un compito da svolgeree richiede informazioni importanti, utili o necessarie per larisoluzione del problema o lo svolgimento del compito}; dunque i documenti sono il primo ingresso del sistema, mentre il secondo e' costitutito dalle interrogazioni; i documenti devono essere indicizzati e nell'indice creato, si andra' a effettuare la ricerca per reperire documenti rilevanti\footnote{la rilevanza e' la proprieta' che rende l'informazione importante, utile o necessaria a soddisfare l'esigenza informativa dell'utente}. Questa seconda parte e' detta reperimento e non si occupa solo di ricercare tra i documenti, ma anche di riordinare secondo un certo ordine di rilevanza. Cio' che descrive i documenti e cio' che descrive le interrogazioni deve essere confrontabile, infatti nei programmi di indicizzaizone e di reperimento si usa uno schema, che deve essere uguale in entrtambi i casi.
+L'indicizzazione e' un trade-off tra il  miglioramento della rapprerentazione del contenuto informativo dei documenti (efficacia) e la gestione degli indici (efficienza). Benche' ci sia sempre tensione tra queste due caratteristiche, ad oggi la questione piu' studiata e' quella dell'efficienza,
+
+Lo scopo è di costruire un motore di ricerca che sia in grado di reperire i documenti rilevanti relativi a una esigenza informativa\footnote{insieme delle circostanze in cui unapersona ha un problema da risolvere o un compito da svolgeree richiede informazioni importanti, utili o necessarie per larisoluzione del problema o lo svolgimento del compito}
+espressa dall'utente sotto forma di query, dalla collezione sperimentale Ohsumed.
+La differenza tra un sistema di Informational Retrival e un DBMS (Databse Management System), e' che in questo caso i dati non sono strutturati, cioe' non possono essere vincolati a uno schema predefinto, e nonostante cio' il sistema deve riuscire a destreggiarsi tra le migliaia di pagine.
+
+
+Esistono diversi modi per risolvere questo problema, nel nostro caso abbiamo ricercato la configurazione migliore tra un sistema di
+reperimento con o senza uso di stopwords e il tuning dei parametri dello schema di pesatura\footnote{funzione che assegna per ogni documento diversi livelli d’importanza dei termini mediante dei pesi, che possono variare con l’interrogazione} BM25F.
+Abbiamo calibrato le nostre scelte e tratto le conlcusioni finali facendo delle prove di reperimento di documenti con diverse combinazioni tra schemi di pesatura e liste di stop word, andando a confrontare due parametri fondamentali: il map, cioe' il 'mean average precision', un indicatore della precisione media del documento in corrispondenza di una determinata interrogazione, e il numero di documenti rilevanti reperiti.
+Nei prossimi paragrafi si descriveranno nello specifico i metodi utlizzati per quanto riguarda l'indicizzazione\footnotne{In generale l'indicizzazione e' la rappresentazione di una struttra logica che combina dati di tipo diverso; nel nostro caso si e' affrontata unicamente la codfica di dati di tipo testo} e il reperimento di documenti, accompagnati dai risultati che abbiamo ottenuto negli esperimenti, principalmente sotto forma di tabelle.
 Questo progetto tratta la realizzazione attraverso il pacchetto \emph{Whoosh}, di un motore di ricerca
 volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.
 Il progetto è anche corredato di un webserver che permette all'utente di interrogare il motore di ricerca
