--- a/modello/modello.tex
+++ b/modello/modello.tex
@@ -38,8 +38,11 @@
 %
 \begin{abstract}
 Questo progetto tratta la realizzazione attraverso il pacchetto \emph{Whoosh}, di un motore di ricerca
-volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.  \keywords{{\it
-      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python}}
+volto al reperimento di documenti della collezione sperimentale \emph{OHSUMED} indicizzata opportunamente.
+Il progetto e' anche corredato di un webserver che permette all'utente di interrogare il motore di ricerca
+in forma interattiva attraverso un browser a scelta.
+ \keywords{{\it
+      Information Retrieval  \and IR \and statistica \and reperimento \and indicizzazione \and Whoosh \and Python \and webserver \and web \and interrogazione web}}
 \end{abstract}
 
 \section{Introduzione}
